# JugVid2cpp

./: .gitignore  BUILD  CMakeLists.txt  INTEGRATION_COMPLETE.md  README.md  WORKSPACE  bazel-JugVid2cpp  bazel-bin  bazel-out  bazel-testlogs  build.bat  build.sh  build_bazel.sh  hand_tracker.hpp  main.cpp  projectile_prediction.py  python_integration_example.py  test_integration.py
